# ekus

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/: settings.json
config/: .scheduler-state.json  jobs.json  message-checker-state.json  trello.json
dashboard/: wrangler.toml
docs/: dashboard-migration-status.md
ekus-app/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
mac-mini/gateway/: chat.html  dashboard.html  https-proxy.py  main.py  pyproject.toml  worker.py
mac-mini/gateway/static/: 404.html  index.html  index.txt  manifest.json  sw.js
mac-mini/gateway/static/_next/static/7bL7zegxNk710--QCTur9/: _buildManifest.js
mac-mini/gateway/static/_next/static/chunks/: 126-af0f32fc298b0761.js  60-f82fc1420416a0ad.js  906-1fc819e69f80a286.js  main-app-4c6a7bd033842a64.js  webpack-df2f10c7b3495ed5.js
mac-mini/gateway/static/_next/static/chunks/app/: layout-4c32fc927d91a06e.js  layout-4cacf5fde098bff3.js  page-1f5af0abdf70c33f.js  page-a83991af7c24b00f.js  page-d25d93b3766f2e35.js  page-da59873f713917e8.js
mac-mini/gateway/static/_next/static/chunks/app/_not-found/: page-45b9afddec5a715a.js  page-554f414f32fa3273.js
mac-mini/gateway/static/_next/static/css/: 24ac0275aef1faf2.css  878761b659e762c1.css  b089a509835cb57b.css
mac-mini/gateway/voice/: __init__.py  cleanup.py  db.py  eval.py  pipeline.py  routes.py  transcriber.py  vad.py
memory/: lessons-learned.md  reminders.md  workflows.md
scripts/: add-job.sh  install-scheduler.sh  list-jobs.sh  mac-mini.sh  refresh-claude-auth.sh  run-job.sh  upload-octa.sh  (+1 more)
(+73 files in other folders)
