[project]
name = "ekus-gateway"
version = "0.1.0"
description = "Ekus Gateway — HTTP server for remote agent execution on Mac Mini"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
    "python-multipart",
    "httpx>=0.28.1",
    "websockets",
    "anthropic>=0.86.0",
    "faster-whisper>=1.1.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.26.0",
    "silero-vad>=6.2.1",
]
